# FFTrix

./: .coverage  .env.example  .gitignore  README.md  angie.conf  funnel.json  pyproject.toml
.nicegui/: storage-user-be48394b-7471-4347-803e-d82e00d90431.json
docs/: ANALYTICS.md  ARCHITECTURE.md  REMOTE_ACCESS.md  STORAGE.md  WATERMARKING.md  analytics.md  cli.md  deployment.md  index.md  ui.md
src/fftrix/: __init__.py  __main__.py  alerts.py  analytics.py  clipper.py  dashboard.py  database.py  discovery.py  engine.py  face_recognition.py  lpr.py  ocr.py  ptz.py  retention.py  segmentation.py  vision.py
tests/: test_fftrix.py
