[project]
name = "fftrix"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Nichols", email = "nik@vizionikmedia.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "numpy>=2.4.3",
    "opencv-contrib-python>=4.13.0.92",
    "pyffmpeg>=2.5.2.3.2",
    "vidgear>=0.3.4",
]

[project.scripts]
fftrix = "fftrix:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
