[project]
name = "fftrix"
version = "1.0.0"
description = "A tool for processing video files using opencv numpy matplotlib vidgear pyffmpeg moviepy and vidgear."
readme = "README.md"
authors = [
    { name = "Charles Nichols", email = "nik@vizionikmedia.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "nicegui>=3.8.0",
    "numpy>=2.4.3",
    "opencv-contrib-python>=4.13.0.92",
    "pyffmpeg>=2.5.2.3.2",
    "pyngrok>=7.5.1",
    "pytesseract>=0.3.13",
    "vidgear>=0.3.4",
]

[project.scripts]
fftrix = "fftrix.__main__:cli"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
